appleclang compiler should be considered as clang

--- a/verilator-config.cmake.in
+++ b/verilator-config.cmake.in
@@ -166,6 +166,9 @@ function(verilate TARGET)
   if (NOT COMPILER MATCHES "msvc|clang")
     set(COMPILER gcc)
   endif()
+  if (COMPILER MATCHES "appleclang")
+    set(COMPILER clang)
+  endif()
 
   get_target_property(BINARY_DIR "${TARGET}" BINARY_DIR)
   get_target_property(TARGET_NAME "${TARGET}" NAME)
